refactor: Move figures.html to views

--- a/views/figures.html
+++ b/views/figures.html
@@ -11,6 +11,6 @@
       <h1>Geometric figures</h1>
     </main>
 
-    <script src="./src/figures.js"></script>
+    <script src="../src/figures.js"></script>
   </body>
 </html>
